[package]
name = "neonet"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
dotenvy = "0.15.7"
p256 = "0.13.2"
rand = "0.8.5"
reqwest = "0.11.24"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.32"
sha2 = "0.10.8"
toml = "0.8.10"
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
utoipa = {version="4",features= ["actix_extras","uuid"] }
utoipa-swagger-ui = {version="6.0.0", features=["actix-web"]}
uuid = "1.7.0"

elliptic-curve = "0.13.8"

# Code that will init a peer
[[bin]]
name = "server"
path = "src/main.rs"
test = true

# Code for development purpose
[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"
test = false

# Client that connect to the peer
[[bin]]
name = "client"
path = "src/bin/client.rs"
test = false

# Gen the swagger signature
[[bin]]
name = "swag_gen"
path = "src/bin/swag_gen.rs"
test = false

# Cli Toolkit
[[bin]]
name = "cli"
path = "src/bin/cli.rs"
test = false
